<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_024387"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/memberAddToolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:title="@string/title_add_member"
            app:titleTextColor="@color/white"
            app:navigationIcon="@drawable/ic_chevron_left_24"/>

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/etName"
        style="@style/FormField"
        android:hint="@string/title_name"
        android:imeOptions="actionNone"
        android:inputType="textPersonName"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar"/>

    <EditText
        android:id="@+id/etDateOfBirth"
        style="@style/FormField.Clickable"
        android:drawableEnd="@drawable/ic_calendar_today_24"
        android:hint="@string/title_date_of_birth"
        android:imeOptions="actionNext"
        android:inputType="date"
        android:nextFocusDown="@id/etGender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName"/>

    <EditText
        android:id="@+id/etGender"
        style="@style/FormField.Clickable"
        android:hint="@string/title_gender"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:nextFocusDown="@id/etUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDateOfBirth"/>

    <EditText
        android:id="@+id/etUsername"
        style="@style/FormField"
        android:hint="@string/title_username"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:nextFocusDown="@id/etPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etGender"/>

    <EditText
        android:id="@+id/etPassword"
        style="@style/FormField"
        android:hint="@string/title_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:nextFocusDown="@id/etAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"/>

    <EditText
        android:id="@+id/etAddress"
        style="@style/FormField"
        android:hint="@string/title_address"
        android:imeOptions="actionDone"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_register"
        android:backgroundTint="@color/blue_024387"
        android:textColor="@color/white"
        android:layout_marginTop="26dp"
        app:cornerRadius="10dp"
        android:textAllCaps="false"
        android:paddingVertical="12dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAddress"/>

</androidx.constraintlayout.widget.ConstraintLayout>