<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_024387"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/changePasswordToolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:title="@string/title_change_password"
            app:titleTextColor="@color/white"
            app:navigationIcon="@drawable/ic_chevron_left_24"/>

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/etOldPassword"
        style="@style/FormField"
        android:hint="@string/title_old_password"
        android:imeOptions="actionNone"
        android:inputType="textPassword"
        android:nextFocusDown="@id/etNewPassword"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar"/>

    <EditText
        android:id="@+id/etNewPassword"
        style="@style/FormField"
        android:hint="@string/title_new_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:nextFocusDown="@id/etConfirmation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etOldPassword"/>

    <EditText
        android:id="@+id/etConfirmation"
        style="@style/FormField"
        android:hint="@string/title_confirmation"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNewPassword"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_change_password"
        android:backgroundTint="@color/blue_024387"
        android:textColor="@color/white"
        android:layout_marginTop="26dp"
        app:cornerRadius="10dp"
        android:textAllCaps="false"
        android:paddingVertical="12dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etConfirmation"/>

</androidx.constraintlayout.widget.ConstraintLayout>